[tool.poetry]
name = "exercise-1-1-ada-lovelace-runembp"
version = "0.1.0"
description = ""
authors = ["RuneB <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
